encode void/undefined result of actor method as 204 (#346)
Use the status code 204 (No Content) to encode that the invocation of
an actor method does not have a result.  In Java, this corresponds to
invoking a void method; in JavaScript this corresponds to an actor
method returning undefined.

Fixes 322.
